--- a/style.css
+++ b/style.css
@@ -1,47 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Karla:wght@400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Spectral:wght@600&display=swap');
 
 body {
     background-color: #0f1a26;
     margin: 50px;
-    font-family: 'Karla', sans-serif;
     background-image: url(/images/anywhere-workers.gif);
     background-repeat: no-repeat;
     background-position: right top;
     background-size: 700px;
+
+
+
 }
+
 
 h1 {
     font-size: 120px;
-    color: #FFF;
-    line-height: 130px;
-    margin-bottom: 50px;
+    color: #fff;
+    width: 50%;
     font-family: 'Spectral', serif;
+    line-height: 130px;
 }
 
 p {
-    font-size: 20px;
     color: #c3d0df;
-    width: 50%;
+    font-family: 'Karla', sans-serif;
+    font-size: 20px;
     margin-bottom: 40px;
+    width: 50%;
 }
 
-.read-more {
+
+.read {
     color: #f33;
+    letter-spacing: 3px;
+    font-family: 'Karla', sans-serif;
     margin-bottom: 80px;
     text-transform: uppercase;
     font-size: 16px;
-    letter-spacing: 3px;
 }
 
 a {
     background-color: #f33;
-    padding: 20px 30px;
+    padding: 20px;
     border-radius: 30px;
-    color: #FFF;
-    text-transform: uppercase;
+    color: #fff;
     text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    letter-spacing: 3px;
+    font-family: 'Karla', sans-serif;
+}
+
+a:hover {
+    background: grey;
 }
